[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/resources/DynamicFontMedium.tres" type="DynamicFont" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 1230.0
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 620.0
margin_bottom = 26.0

[node name="SignedInLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 308.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Signed in into Google?"

[node name="SignedInStatus" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 312.0
margin_right = 620.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "No :("

[node name="SignIn" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 620.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Sign in!"

[node name="ShowAchievements" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 226.0
margin_right = 620.0
margin_bottom = 326.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Show achievements"

[node name="TestAchievement" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 376.0
margin_right = 620.0
margin_bottom = 476.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Test Achievement"

[node name="IncrementAchievement" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 526.0
margin_right = 620.0
margin_bottom = 626.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Click for a surprise"

[node name="RevealButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 676.0
margin_right = 620.0
margin_bottom = 776.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "What is this?"

[connection signal="pressed" from="MarginContainer/VBoxContainer/SignIn" to="." method="_on_sign_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ShowAchievements" to="." method="_on_show_achievements_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TestAchievement" to="." method="_on_test_achievement_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/IncrementAchievement" to="." method="_on_increment_achievement_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RevealButton" to="." method="_on_reveal_button_pressed"]
